@@ -381,7 +381,10 @@ public class MoveValidator
 			friendlyOrSubmerged.add(Matches.enemyUnit(player, data).invert());
 			friendlyOrSubmerged.add(Matches.unitIsSubmerged(data));
 			if (!route.getEnd().getUnits().allMatch(friendlyOrSubmerged) && !(Match.allMatch(units, Matches.UnitIsAir) && route.getEnd().isWater()))
-				return result.setErrorReturnResult("Cannot advance to battle in non combat");
+			{
+				if (!Match.allMatch(units, Matches.UnitIsSub) || !games.strategy.triplea.Properties.getSubsCanEndNonCombatMoveWithEnemies(data))
+					return result.setErrorReturnResult("Cannot advance to battle in non combat");
+			}
 		}
 		if (Match.allMatch(units, Matches.UnitIsAir))
 		{
